--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,35 +1,35 @@
 ---
----  
-<nav class="sticky top-0 z-50 bg-white dark:bg-[#121212] border-b border-gray-200 dark:border-gray-700">
+---
+<nav class="sticky top-0 z-50 bg-white dark:bg-[#121212] border-gray-200 dark:border-gray-700">
   <ul class="flex gap-4 p-4 m-0 list-none">
     <li>
-      <a 
-        href="/" 
-        class="block px-4 py-2 font-medium text-gray-800 hover:bg-gray-100 rounded"
+      <a
+        href="#top-section"
+        class="block px-4 py-2 font-medium text-gray-800 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 rounded"
       >
         Home
       </a>
     </li>
     <li>
-      <a 
-        href="/experience" 
-        class="block px-4 py-2 font-medium text-gray-800 hover:bg-gray-100 rounded"
+      <a
+        href="#experience"
+        class="block px-4 py-2 font-medium text-gray-800 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 rounded"
       >
         Experience
       </a>
     </li>
     <li>
-      <a 
-        href="/socials" 
-        class="block px-4 py-2 font-medium text-gray-800 hover:bg-gray-100 rounded"
+      <a
+        href="#skills"
+        class="block px-4 py-2 font-medium text-gray-800 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 rounded"
       >
-        Socials
+        Skills/Education
       </a>
     </li>
     <li>
-      <a 
-        href="/gallery" 
-        class="block px-4 py-2 font-medium text-gray-800 hover:bg-gray-100 rounded"
+      <a
+        href="#gallery"
+        class="block px-4 py-2 font-medium text-gray-800 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 rounded"
       >
         Gallery
       </a>
