--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,49 +1,51 @@
 ---
 import background from "../assets/herobg.jpg";
 import "../styles/global.css";
-import ExperienceSection from "../components/ExperienceSection.astro";
 ---
 
 <main class="dark:text-white">
 	<section
 		id="top-section"
-		class="relative flex items-center justify-start h-screen overflow-hidden"
+		class="snap-start h-screen [scroll-snap-stop:always]
+         relative flex items-center justify-start overflow-hidden"
 	>
 		<div class="absolute inset-0">
 			<img
 				src={background.src}
-				alt="Mountain landscape background"
+				alt="Mountain landscape"
 				class="w-full h-full object-cover"
 			/>
 			<div class="absolute inset-0 bg-black/30"></div>
 		</div>
 
 		<div
-			class="w-full max-w-3xl p-8 bg-black/10 backdrop-blur-sm rounded-2xl mr-auto ml-20"
+			class="w-full max-w-3xl p-8 bg-black/10 backdrop-blur-sm rounded-2xl ml-20"
 		>
 			<h1 class="text-4xl md:text-5xl font-bold mb-4 text-white">
-				Hey, I’m <span class="text-blue-300">Keith!</span>
+				Hey, I&#39;m <span class="text-blue-300">Keith!</span>
 			</h1>
 			<h2 class="text-xl md:text-2xl font-medium mb-8 text-gray-100">
 				Floridian Software Developer & Photographer with experience in
 				DoD Contract Software & Electrical Manufacturing Software.<br
 				/><br />
-				I’m a photographer who loves traveling and capturing new places.
+				I&#39;m a photographer who loves traveling and capturing new places.
 				I hit the gym regularly and spend my free time hanging out with my
-				dog, Jax. I grew up surfing—so the beach is home—and I’ve always
+				dog, Jax. I grew up surfing-so the beach is home-and I&#39;ve always
 				had an affinity for computers and tech.
 			</h2>
 
 			<div class="flex flex-col sm:flex-row gap-4">
 				<a
 					class="px-6 py-3 bg-blue-600/90 hover:bg-blue-700 text-white rounded-lg font-medium text-base transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-blue-500/25 backdrop-blur-sm"
+					href="#experience"
 				>
 					Experience
 				</a>
 				<a
 					class="px-6 py-3 bg-blue-400/90 hover:bg-blue-400 text-white rounded-lg font-medium text-base transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-blue-500/25 backdrop-blur-sm"
+					href="#skills"
 				>
-					About Me
+					Skills/Education
 				</a>
 				<a
 					class="px-6 py-3 bg-blue-300/90 hover:bg-blue-300 text-white rounded-lg font-medium text-base transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-blue-400/25 backdrop-blur-sm"
@@ -53,11 +55,4 @@ import ExperienceSection from "../components/ExperienceSection.astro";
 			</div>
 		</div>
 	</section>
-
-	<section id="separator" class="h-20"></section>
-
-	 <ExperienceSection />
-
-	<section id="separator" class="h-20"></section>
-
 </main>
