--- a/src/components/SkillsSection.astro
+++ b/src/components/SkillsSection.astro
@@ -9,7 +9,7 @@ const skills = [
   { name: ".NET",     iconClass: "devicon-dotnetcore-plain colored"  },
   { name: "Git",      iconClass: "devicon-git-plain colored"         },
   { name: "Docker",   iconClass: "devicon-docker-plain colored"      },
-  { name: "Avalonia", iconSrc: "/src/assets/avalonia-colored.svg"    },
+  { name: "Avalonia", iconSrc: "/src/assets/avalonia.svg"    },
   { name: "Figma",    iconClass: "devicon-figma-plain colored"       },
 ];
 ---
