--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -23,14 +23,14 @@ import "../styles/global.css";
              ml-4 sm:ml-20"
     >
       <h1 class="text-4xl md:text-5xl font-bold mb-4 text-white">
-        Hey, I’m <span class="text-blue-300">Keith!</span>
+        Hey, I&#39;m <span class="text-blue-300">Keith</span>!
       </h1>
       <h2 class="text-lg md:text-2xl font-medium mb-8 text-gray-100">
         Floridian Software Developer & Photographer with experience in
         DoD Contract Software & Electrical Manufacturing Software.<br /><br />
-        I’m a photographer who loves traveling and capturing new places.
+        I&#39;m a photographer who loves traveling and photographing new places.
         I hit the gym regularly and spend my free time hanging out with my
-        dog, Jax. I grew up surfing—so the beach is home—and I’ve always
+        dog, Jax. I grew up surfing—so the beach is home—and I&#39;ve always
         had an affinity for computers and tech.
       </h2>
 
