--- a/src/components/ExperienceSection.astro
+++ b/src/components/ExperienceSection.astro
@@ -7,11 +7,13 @@ import SRTLogo from "../assets/SRTLogo.jpg";
 
 <section
   id="experience"
-  class="snap-start min-h-screen [scroll-snap-stop:always] flex items-center justify-center py-8"
+  class="pt-12 sm:pt-8 flex items-center justify-center py-15"
 >
   <div class="max-w-6xl w-full px-4 sm:px-6">
     <div class="text-center mb-12">
-      <h2 class="text-4xl sm:text-5xl font-extrabold text-gradient-smooth animate-glow">
+      <h2
+        class="text-4xl sm:text-5xl font-extrabold text-gradient-smooth animate-glow"
+      >
         Experience
       </h2>
       <p class="mt-4 text-gray-600 dark:text-gray-400">
@@ -35,9 +37,11 @@ import SRTLogo from "../assets/SRTLogo.jpg";
             </ul>
           `}
           class={`
-            h-full group hover:scale-105 transition-transform duration-300
+            h-full
+            group hover:scale-105 transition-transform duration-300
             bg-gradient-to-br from-gray-800 to-gray-700 rounded-2xl p-8
-            shadow-lg hover:shadow-2xl transform hover:scale-105 hover:-rotate-1
+            shadow-lg hover:shadow-2xl
+            transform hover:scale-105 hover:-rotate-1
             flex flex-col justify-between
           `}
         />
@@ -59,9 +63,11 @@ import SRTLogo from "../assets/SRTLogo.jpg";
             </ul>
           `}
           class={`
-            h-full group hover:scale-105 transition-transform duration-300
+            h-full
+            group hover:scale-105 transition-transform duration-300
             bg-gradient-to-br from-gray-800 to-gray-700 rounded-2xl p-8
-            shadow-lg hover:shadow-2xl transform hover:scale-105 hover:-rotate-1
+            shadow-lg hover:shadow-2xl
+            transform hover:scale-105 hover:-rotate-1
             flex flex-col justify-between
           `}
         />
