--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ import Navbar from "../components/Navbar.astro";
   <body class="flex flex-col min-h-screen dark">
     <Navbar />
     <main
-      class="flex-grow h-screen overflow-y-scroll scroll-smooth dark:bg-[#121212]"
+      class="flex-grow h-screen scroll-smooth dark:bg-[#121212]"
     >
       <slot />
     </main>
